# embed-rs

./: Cargo.toml  README.md
example/: data.jsonlines  experiment-frame.json  result.json
src/: deepcopy.rs  embed.rs  main.rs
