[package]
name = "embed"
version = "0.1.0"
authors = ["Laurence Rowe <laurence@lrowe.co.uk>"]
edition = "2018"

[features]
logging_allocator = ["logging-allocator"]

[profile.release]
debug = true

[dependencies]
clap = "~2.33"
flexbuffers = { git = "https://github.com/CasperN/flatbuffers" }
lmdb-rkv = "~0.14"
serde_json = "~1.0"
log = "~0.4"
logging-allocator = { version = "~0.1", optional = true }
env_logger = "~0.7"
